--- a/notuber/index.html
+++ b/notuber/index.html
@@ -3,9 +3,10 @@
 <head>
 <meta charset="utf-8" />
 
-<title>Notuber</title>
+<title>NotUber</title>
 
-<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=true"></script>
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=true"></script> 
+<!--<script src="https://maps.google.com/maps/api/js?libraries=geometry" async defer></script> -->
 <link rel="stylesheet" href="index-style.css" />
 
 <script>
@@ -18,17 +19,18 @@
 	var position = new google.maps.LatLng(lat, long);
 
 	var myOptions = {
-		zoom: 15,
+		zoom: 13,
 		center: position,
 		mapTypeId: google.maps.MapTypeId.ROADMAP
 	}
 
+	var map;
 	var marker;
 	var infoWindow = new google.maps.InfoWindow();
 
 function init() 
 {
-	var map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
+	map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
 	getLocation();
 }
 
@@ -39,18 +41,29 @@ function getLocation()
 		navigator.geolocation.getCurrentPosition(function(position) {
 				lat = position.coords.latitude;
 				long = position.coords.longitude;
+				console.log("got coordinates!");
 				renderMap();
 		});
 	} else {
 		alert("Geolocation is not supported by your web browser. Sorry!");
 	}
+
+
+	console.log("got location.");
 }
 
 function renderMap() 
 {
 
+
+	console.log("rendering");
+
+
 	location = new google.maps.LatLng(lat, long);
 	map.panTo(location);
+
+	console.log("panned");
+
 
 	var image = "icon.png";
 	marker = new google.maps.Marker({
@@ -65,15 +78,25 @@ function renderMap()
 	});
 }
 
+function parseReponse()
+{
+
+	
+}
+
 var url = "https://defense-in-derpth.herokuapp.com/submit";
 request.open("POST", url, true);
 request.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
 request.onreadystatechange = function() {
-	if (request.readyState == 4 && request.status == 200) {
+	if (request.readyState === 4 && request.status === 200) {
 		alert(request.responseText);
-		console.log(request.responseText);
+		//console.log(request.responseText);
+
+		// parse json response !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+		parseResponse();
 	}
 }
+console.log("requesting send");
 request.send("username=iraQrjcj&lat="+lat+"&lng="+long);
 
 </script>
