--- a/notuber/index.html
+++ b/notuber/index.html
@@ -11,21 +11,21 @@
 
 <script>
 
-
-
 	var lat = 0;     // my latitude
-	var long = 0;    // my longitude
+	var lng = 0;    // my longitude
 	var request = new XMLHttpRequest();
-	var position = new google.maps.LatLng(lat, long);
+	var pos = new google.maps.LatLng(lat, lng);
 
 	var myOptions = {
 		zoom: 13,
-		center: position,
+		center: pos,
 		mapTypeId: google.maps.MapTypeId.ROADMAP
 	}
 
 	var map;
-	var marker;
+	var marker1;
+	var marker2;
+	var image = "icon.png";
 	var infoWindow = new google.maps.InfoWindow();
 
 function init() 
@@ -39,49 +39,72 @@ function getLocation()
 
 	if (navigator.geolocation) {
 		navigator.geolocation.getCurrentPosition(function(position) {
-				lat = position.coords.latitude;
-				long = position.coords.longitude;
-				console.log("got coordinates!");
-				renderMap();
+			var pos = {
+				lat: position.coords.latitude,
+				lng: position.coords.longitude
+			};
+			renderMap();
 		});
 	} else {
 		alert("Geolocation is not supported by your web browser. Sorry!");
 	}
-
-
-	console.log("got location.");
 }
 
 function renderMap() 
 {
+	renderMe();
+	//renderOthers();
+}
 
+function renderMe()
+{
+	var me = new google.maps.LatLng(lat, lng);
+	map.panTo(me);
 
-	console.log("rendering");
+	marker1 = new google.maps.Marker({
+		position: me,
+		icon: image
+	});
+	marker1.setMap(map);
 
+	google.maps.event.addListener(marker1, "click", function() {
+		infoWindow.setContent("iraQrjcj");
+		infoWindow.open(map, this);
+	});	
+}
 
-	location = new google.maps.LatLng(lat, long);
-	map.panTo(location);
+function renderOthers(user, userLat, userLng)
+{
+	var location = new google.maps.LatLng(userLat, userLng);
 
-	console.log("panned");
-
-
-	var image = "icon.png";
-	marker = new google.maps.Marker({
+	marker2 = new google.maps.Marker({
 		position: location,
 		icon: image
 	});
-	marker.setMap(map);
+	marker2.setMap(map);
 
-	google.maps.event.addListener(marker, "click", function() {
-		infowindow.setContent(this.content);
-		infowindow.open(map, this);
+	google.maps.event.addListener(marker2, "click", function() {
+		infoWindow.setContent(user);
+		infoWindow.open(map, this);
 	});
-}
 
-function parseReponse()
+}
+ 
+function parseResponse(responseText)
 {
 
-	
+	var user;
+	var userLat;
+	var userLng;
+	var jsonString = JSON.parse(responseText);
+
+	for (var i = 0; i < jsonString.passengers.length; i++) {
+		user = jsonString.passengers[i].username;
+		userLat = jsonString.passengers[i].lat;
+		userLng = jsonString.passengers[i].lng;
+		renderOthers(user, userLat, userLng);
+	}
+
 }
 
 var url = "https://defense-in-derpth.herokuapp.com/submit";
@@ -89,15 +112,11 @@ request.open("POST", url, true);
 request.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
 request.onreadystatechange = function() {
 	if (request.readyState === 4 && request.status === 200) {
-		alert(request.responseText);
-		//console.log(request.responseText);
-
-		// parse json response !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-		parseResponse();
+		//alert(request.responseText);
+		parseResponse(request.responseText);
 	}
 }
-console.log("requesting send");
-request.send("username=iraQrjcj&lat="+lat+"&lng="+long);
+request.send("username=iraQrjcj&lat="+lat+"&lng="+lng);
 
 </script>
 
