--- a/notuber/index.html
+++ b/notuber/index.html
@@ -5,119 +5,112 @@
 
 <title>NotUber</title>
 
-<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=true"></script> 
-<!--<script src="https://maps.google.com/maps/api/js?libraries=geometry" async defer></script> -->
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=geometry&sensory=true"></script>
 <link rel="stylesheet" href="index-style.css" />
 
 <script>
-
-	var lat = 0;     // my latitude
-	var lng = 0;    // my longitude
+	var myLat = 0;    
+	var myLng = 0;    
 	var request = new XMLHttpRequest();
-	var pos = new google.maps.LatLng(lat, lng);
-
+	var me = new google.maps.LatLng(myLat, myLng);
 	var myOptions = {
 		zoom: 13,
-		center: pos,
+		center: me,
 		mapTypeId: google.maps.MapTypeId.ROADMAP
 	}
-
 	var map;
 	var marker1;
 	var marker2;
-	var image = "icon.png";
+	var image1 = "iconn.png";
+	var image2 = "othericon.png";
 	var infoWindow = new google.maps.InfoWindow();
-
 function init() 
 {
 	map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
 	getLocation();
 }
-
 function getLocation()
 {
-
 	if (navigator.geolocation) {
 		navigator.geolocation.getCurrentPosition(function(position) {
-			var pos = {
-				lat: position.coords.latitude,
-				lng: position.coords.longitude
-			};
+	
+			myLat = position.coords.latitude;
+			myLng = position.coords.longitude;
+
 			renderMap();
 		});
 	} else {
 		alert("Geolocation is not supported by your web browser. Sorry!");
 	}
 }
-
 function renderMap() 
 {
 	renderMe();
-	//renderOthers();
 }
-
 function renderMe()
 {
-	var me = new google.maps.LatLng(lat, lng);
+	me = new google.maps.LatLng(myLat, myLng);
 	map.panTo(me);
-
 	marker1 = new google.maps.Marker({
 		position: me,
-		icon: image
+		icon: image1
 	});
 	marker1.setMap(map);
-
 	google.maps.event.addListener(marker1, "click", function() {
 		infoWindow.setContent("iraQrjcj");
 		infoWindow.open(map, this);
 	});	
 }
-
 function renderOthers(user, userLat, userLng)
 {
 	var location = new google.maps.LatLng(userLat, userLng);
-
 	marker2 = new google.maps.Marker({
 		position: location,
-		icon: image
+		icon: image2
 	});
 	marker2.setMap(map);
 
+	//var distance = new google.maps.geometry.spherical.computeDistanceBetween(me, location) * 0.000621371;
+
+	console.log("me: "+me);
+	console.log(google.maps.geometry.spherical.computeDistanceBetween(me, location)*0.000621371);
+	//console.log(distance+" first!!!!");
+	//distance *= 0.000621371;
+	//console.log(distance);
+
 	google.maps.event.addListener(marker2, "click", function() {
-		infoWindow.setContent(user);
+		infoWindow.setContent("User "+user+" is "+google.maps.geometry.spherical.computeDistanceBetween(me, location)*0.000621371+" miles away!");
 		infoWindow.open(map, this);
 	});
-
 }
  
 function parseResponse(responseText)
 {
-
 	var user;
 	var userLat;
 	var userLng;
 	var jsonString = JSON.parse(responseText);
-
 	for (var i = 0; i < jsonString.passengers.length; i++) {
 		user = jsonString.passengers[i].username;
 		userLat = jsonString.passengers[i].lat;
 		userLng = jsonString.passengers[i].lng;
+
+		console.log("loop number     "+i);
+
 		renderOthers(user, userLat, userLng);
 	}
-
 }
-
 var url = "https://defense-in-derpth.herokuapp.com/submit";
 request.open("POST", url, true);
 request.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
 request.onreadystatechange = function() {
 	if (request.readyState === 4 && request.status === 200) {
 		//alert(request.responseText);
+		//console.log(request.responseText);
 		parseResponse(request.responseText);
 	}
 }
-request.send("username=iraQrjcj&lat="+lat+"&lng="+lng);
-
+request.send("username=iraQrjcj&lat="+myLat+"&lng="+myLng);
 </script>
 
 </head>
@@ -126,6 +119,8 @@ request.send("username=iraQrjcj&lat="+lat+"&lng="+lng);
 	<div id="map_canvas"></div>
 
 </body>
+
+
 
 
 </html>
