--- a/notuber/working-index.html
+++ b/notuber/working-index.html
@@ -1,28 +1,29 @@
 <!DOCTYPE html>
 <html>
+<!--the index.html for notuber that works i think, shows other icons -->
 <head>
 <meta charset="utf-8" />
 
 <title>NotUber</title>
 
-<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=geometry&sensory=true"></script>
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=true"></script> 
+<!--<script src="https://maps.google.com/maps/api/js?libraries=geometry" async defer></script> -->
 <link rel="stylesheet" href="index-style.css" />
 
 <script>
-	var myLat = 0;    
-	var myLng = 0;    
+	var lat = 0;     // my latitude
+	var lng = 0;    // my longitude
 	var request = new XMLHttpRequest();
-	var me = new google.maps.LatLng(myLat, myLng);
+	var pos = new google.maps.LatLng(lat, lng);
 	var myOptions = {
 		zoom: 13,
-		center: me,
+		center: pos,
 		mapTypeId: google.maps.MapTypeId.ROADMAP
 	}
 	var map;
 	var marker1;
 	var marker2;
-	var image1 = "iconn.png";
-	var image2 = "othericon.png";
+	var image = "icon.png";
 	var infoWindow = new google.maps.InfoWindow();
 function init() 
 {
@@ -33,10 +34,10 @@ function getLocation()
 {
 	if (navigator.geolocation) {
 		navigator.geolocation.getCurrentPosition(function(position) {
-	
-			myLat = position.coords.latitude;
-			myLng = position.coords.longitude;
-
+			var pos = {
+				lat: position.coords.latitude,
+				lng: position.coords.longitude
+			};
 			renderMap();
 		});
 	} else {
@@ -46,18 +47,19 @@ function getLocation()
 function renderMap() 
 {
 	renderMe();
+	//renderOthers();
 }
 function renderMe()
 {
-	me = new google.maps.LatLng(myLat, myLng);
+	var me = new google.maps.LatLng(lat, lng);
 	map.panTo(me);
 	marker1 = new google.maps.Marker({
 		position: me,
-		icon: image1
+		icon: image
 	});
 	marker1.setMap(map);
 	google.maps.event.addListener(marker1, "click", function() {
-		infoWindow.setContent("I am iraQrjcj !");
+		infoWindow.setContent("iraQrjcj");
 		infoWindow.open(map, this);
 	});	
 }
@@ -66,12 +68,11 @@ function renderOthers(user, userLat, userLng)
 	var location = new google.maps.LatLng(userLat, userLng);
 	marker2 = new google.maps.Marker({
 		position: location,
-		icon: image2
+		icon: image
 	});
 	marker2.setMap(map);
-
 	google.maps.event.addListener(marker2, "click", function() {
-		infoWindow.setContent("User "+user+" is "+google.maps.geometry.spherical.computeDistanceBetween(me, location)*0.000621371+" miles away!");
+		infoWindow.setContent(user);
 		infoWindow.open(map, this);
 	});
 }
@@ -89,17 +90,16 @@ function parseResponse(responseText)
 		renderOthers(user, userLat, userLng);
 	}
 }
-var url = "https://protected-fortress-10476.herokuapp.com/submit";
+var url = "https://defense-in-derpth.herokuapp.com/submit";
 request.open("POST", url, true);
 request.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
 request.onreadystatechange = function() {
 	if (request.readyState === 4 && request.status === 200) {
 		//alert(request.responseText);
-		//console.log(request.responseText);
 		parseResponse(request.responseText);
 	}
 }
-request.send("username=iraQrjcj&lat="+myLat+"&lng="+myLng);
+request.send("username=iraQrjcj&lat="+lat+"&lng="+lng);
 </script>
 
 </head>
@@ -108,8 +108,6 @@ request.send("username=iraQrjcj&lat="+myLat+"&lng="+myLng);
 	<div id="map_canvas"></div>
 
 </body>
-
-
 
 
 </html>
